# operational-data-quality-engine

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  improvement.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
data/processed/: README.md
data/raw/: README.md  operational_tracker_sample.csv
data/reference/: README.md
docs/: architecture.md  business-assumptions.md  data-dictionary.md  data-quality-rules.md  example-output.md  exception-register-preview.md  implementation-roadmap.md  limitations.md  public-readiness-audit.md  reviewer-guide.md  sample-data-plan.md  security-posture.md  test-plan.md
outputs/: README.md  exception_register.csv  quality_summary.md
scripts/: export_exception_preview.py
src/quality_engine/: __init__.py  cli.py  ingest.py  reporting.py  rules.py  schema.py  scoring.py
tests/: README.md  test_cli.py  test_reporting.py  test_rules.py  test_schema.py  test_scoring.py
