[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "operational-data-quality-engine"
version = "0.1.0"
description = "A portfolio data quality engine for operational reporting tracker checks."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Michael" }]
dependencies = []

[project.scripts]
quality-engine = "quality_engine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
